<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="logo_description">logo_description</string>
    <string name="welcome_to_our_shoe_store">Welcome to our Shoe Store</string>
    <string name="go">Go</string>
    <string name="instructions_content">Please follow the following instructions to enjoy a good buying experience:\n
    In the next screen click on the add button to go to Details Screen\n
    Enter new Shoe details. After saving it, will be displayed on the list\n
    Happy visit !!</string>
    <string name="instructions_label">Instructions</string>
    <string name="btn_details_desc">Go to details screen</string>
    <string name="shoes_list">Shoes list</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="description_lbl">Description</string>
    <string name="shoe_size_lbl">Shoe Size</string>
    <string name="shoe_company_lbl">Company</string>
    <string name="shoe_name_lbl">Shoe Name</string>
    <string name="login_fragment_title">LOGIN</string>
    <string name="welcome_fragment_title">WELCOME</string>
    <string name="instructions_fragment_title">INSTRUCTIONS</string>
    <string name="shoe_list_fragment_title">SHOE LIST</string>
    <string name="details_fragment_title">SHOE DETAILS</string>
    <string name="password_hint">123456</string>
    <string name="email_hint">user@example.com</string>
    <string name="incorrect_size_error">valid sizes between %d and %d only</string>
    <string name="can_not_be_blank_error">can not be blank</string>
    <string name="text_large_error">characters should not exceed %d character(s)</string>
    <string name="no_shoes_currently_in_the_store">No shoes currently in the store. Please Click the add button to add shoes</string>
    <string name="read_instructions">Read Instructions</string>
    <string name="logout">Logout</string>

</resources>