<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!--Linear layout becuase the fragment has 3 views aligned horizontally.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            tools:text="@string/shoe_name_lbl" />

        <TextView
            android:id="@+id/company_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            tools:text="@string/shoe_company_lbl" />

        <TextView
            android:id="@+id/size_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            tools:text="@string/shoe_size_lbl" />

    </LinearLayout>

</layout>