<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="udacity.fwd.project1solution.ui.viewmodels.ShoeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/go_details_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/btn_details_desc"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            tools:ignore="ImageContrastCheck"

            />

        <ScrollView
            android:id="@+id/list_vu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/shoes_list"
            tools:context=".ShoeListFragment">


            <LinearLayout
                android:id="@+id/list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:visibility="@{viewModel.shoeList.isEmpty() ?  View.GONE : View.VISIBLE}">

                    <TextView
                        android:id="@+id/name_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/shoe_name_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/company_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/shoe_company_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/size_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/shoe_size_lbl"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/no_shoes_messgae"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="128dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/no_shoes_currently_in_the_store"
                    android:textSize="24sp"
                    android:visibility="@{viewModel.shoeList.isEmpty() ?  View.VISIBLE : View.GONE }" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>