<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/graph_loginFragment">


    <fragment
        android:id="@+id/graph_loginFragment"
        android:name="udacity.fwd.project1solution.LoginFragment"
        android:label="@string/login_fragment_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment2_to_welcomeFragment"
            app:destination="@id/graph_welcomeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/graph_loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/graph_welcomeFragment"
        android:name="udacity.fwd.project1solution.WelcomeFragment"
        android:label="@string/welcome_fragment_title">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/graph_instructionsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/graph_instructionsFragment"
        android:name="udacity.fwd.project1solution.InstructionsFragment"
        android:label="@string/instructions_fragment_title">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/graph_shoeListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/graph_welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/graph_shoeListFragment"
        android:name="udacity.fwd.project1solution.ShoeListFragment"
        android:label="@string/shoe_list_fragment_title">
        <action
            android:id="@+id/action_shoeListFragment_to_detailsFragment"
            app:destination="@id/graph_detailsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_graph_shoeListFragment_to_graph_loginFragment"
            app:destination="@id/graph_loginFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/graph_shoeListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/graph_detailsFragment"
        android:name="udacity.fwd.project1solution.DetailsFragment"
        android:label="@string/details_fragment_title"
        tools:layout="@layout/fragment_details">
        <action
            android:id="@+id/action_detailsFragment_to_shoeListFragment"
            app:destination="@id/graph_shoeListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/graph_shoeListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>