<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="udacity.fwd.project1solution.converters.DoubleConverter" />

        <variable
            name="shoe"
            type="udacity.fwd.project1solution.models.Shoe" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/shoeNameTv"
            style="@style/font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_name_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoeNameText"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
            app:layout_constraintStart_toStartOf="@+id/shoeNameTv"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameTv" />

        <EditText
            android:id="@+id/companyNameText"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoe.company}"
            app:layout_constraintStart_toStartOf="@+id/companyNameTv"
            app:layout_constraintTop_toBottomOf="@+id/companyNameTv" />

        <TextView
            android:id="@+id/companyNameTv"
            style="@style/font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_company_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameText" />

        <EditText
            android:id="@+id/shoeSizeText"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:text="@={DoubleConverter.doubleToString(shoe.size)}"
            app:layout_constraintStart_toStartOf="@+id/shoeSizeTv"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeTv" />

        <TextView
            android:id="@+id/shoeSizeTv"
            style="@style/font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_size_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyNameText" />

        <EditText
            android:id="@+id/shoeDescText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/shoeDescTv"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescTv" />

        <TextView
            android:id="@+id/shoeDescTv"
            style="@style/font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeText" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:text="@string/cancel_btn" />


            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:text="@string/save_btn" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>